Remove allcaps in Navbar dropdown

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
               <li><a href="#members">Members</a></li>
               <li class="drop-down"><a href="">Events</a>
                 <ul>
-                  <li><a href="#investas">INVESTAS</a></li>
-                  <li><a href="#insight">INSIGHT</a></li>
-                  <li><a href="#talk">THE TALK</a></li>
-                  <li><a href="#guest-lectures">GUEST LECTURES AND WEBINARS</a></li>
+                  <li><a href="#investas">Investas</a></li>
+                  <li><a href="#insight">Insight</a></li>
+                  <li><a href="#talk">The Talk</a></li>
+                  <li><a href="#guest-lectures">Guest Lectures and Webinars</a></li>
                 </ul>
               </li>
               <li class="drop-down"><a href="">Projects</a>
