feat: adapt navigation bar and title page (#3)
* navigation bar and title change

* Remove allcaps in Navbar dropdown

Co-authored-by: Siddharth Venu <siddharthvvenu@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KnightOne Bootstrap Template - Index</title>
+  <title>ProfNITT</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center justify-content-between">
-          <h1 class="logo"><a href="index.html">KnightOne</a></h1>
+          <h1 class="logo"><a href="#">ProfNITT</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -51,28 +51,23 @@
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#pricing">Pricing</a></li>
-              <li class="drop-down"><a href="">Drop Down</a>
+              <li><a href="#members">Members</a></li>
+              <li class="drop-down"><a href="">Events</a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li class="drop-down"><a href="#">Deep Drop Down</a>
-                    <ul>
-                      <li><a href="#">Deep Drop Down 1</a></li>
-                      <li><a href="#">Deep Drop Down 2</a></li>
-                      <li><a href="#">Deep Drop Down 3</a></li>
-                      <li><a href="#">Deep Drop Down 4</a></li>
-                      <li><a href="#">Deep Drop Down 5</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Drop Down 2</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#investas">Investas</a></li>
+                  <li><a href="#insight">Insight</a></li>
+                  <li><a href="#talk">The Talk</a></li>
+                  <li><a href="#guest-lectures">Guest Lectures and Webinars</a></li>
+                </ul>
+              </li>
+              <li class="drop-down"><a href="">Projects</a>
+                <ul>
+                  <li><a href="#bharatx">BharatX</a></li>
+                  <li><a href="#navriti">Navriti</a></li>
                 </ul>
               </li>
               <li><a href="#contact">Contact</a></li>
-
+              <li><a href="#inductions">Inductions</a></li>
             </ul>
           </nav><!-- .nav-menu -->
 
@@ -88,9 +83,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h1>KnightOne - Create Bootstrap Website Template</h1>
-          <h2>We are team of designers making websites with Bootstrap</h2>
-          <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+          <h1>ProfNITT</h1>
+          <h2>The Finance and Investment club of NIT Trichy.</h2> 
         </div>
       </div>
     </div>
