feat: update about us and events section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                   <li><a href="#insight">Insight</a></li>
                   <li><a href="#talk">The Talk</a></li>
                   <li><a href="#guest-lectures">Guest Lectures and Webinars</a></li>
+                  <li><a href="#competitions">Case Solving Competitions</a></li>
                 </ul>
               </li>
               <li class="drop-down"><a href="">Projects</a>
@@ -84,7 +85,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2> 
+          <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
     </div>
@@ -98,89 +99,79 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>What started out as a Whatsapp Group among students interested in finance, ProfNITT is now the finance and investments club of NIT Trichy, with more than 30 members.We aim to bring about financial literacy among students of NIT-Trichy, helping them make well-informed monetary decisions.</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <p>The club conducts several events throughout the year to engage with the student community such as</p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i>Knowledge Sharing Sessions</li>
+              <li><i class="ri-check-double-line"></i>Guest Lectures and Webinars</li>
+              <li><i class="ri-check-double-line"></i>Workshops</li>
+              <li><i class="ri-check-double-line"></i>Case Solving Competitions</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+             The club also aims to empower its members by increasing their knowledge base in finance related domains, via various interactions, discussions and industry projects brought with the help of our strong alumni network.
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
       </div>
-    </section><!-- End About Us Section -->
+    </section>
 
-    <!-- ======= Services Section ======= -->
+    <!-- End About Us Section -->
+
+    <!-- ======= Events Section ======= -->
     <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Events</h2>
+          <p>The Club Conducts various other events throughout the academic year, to engage with the student community and introduce them to important concepts and new advancements in finance.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Investas</a></h4>
+              <p>Investas is the annual 3-day managerial-fest conducted by ProfNITT, the Finance and Investments club of NIT Trichy for Finance Enthusiasts in NIT Trichy and South India.<br />The 2019 edition of Investas was a resounding success with 8 major events and 5 sponsors, and over 1000 students attending the fest.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Insight</a></h4>
+              <p>Every year, a distinguished alumni in the field of finance is invited to interact with the student community and put forward their opinions on various upcoming domains of finance.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">The Talk</a></h4>
+              <p>Every year we invite a Finance Leader to Campus to share their journey to the students and give them exposure from an Alumni who trod a different path to become a pioneer in their field.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Guest Lectures and Webinars</a></h4>
+              <p>ProfNITT takes pride in having a strong mentor-alumni network, who are willing to shed light on interesting and important happenings in the world of finance and take out their time to interacting with us either offline or online.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Divera don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Case Solving Competitions</a></h4>
+              <p>The club also conducts various case-solving competitions throughout the year, where students try solving real-life industry problems.</p>
             </div>
           </div>
 
