--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2>
+          <h2>The Finance and Investment club of NIT Trichy.</h2> 
         </div>
       </div>
     </div>
@@ -99,7 +99,10 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>What started out as a Whatsapp Group among students interested in finance, ProfNITT is now the finance and investments club of NIT Trichy, with more than 30 members.We aim to bring about financial literacy among students of NIT-Trichy, helping them make well-informed monetary decisions.</p>
+          <p>What started out as a WhatsApp Group among students interested in finance, ProfNITT is now the finance and investments club of NIT Trichy,
+             with more than 30 members.We aim to bring about financial literacy among students of NIT-Trichy, helping them make well-informed
+             monetary decisions.
+          </p>
         </div>
 
         <div class="row content">
@@ -114,7 +117,8 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-             The club also aims to empower its members by increasing their knowledge base in finance related domains, via various interactions, discussions and industry projects brought with the help of our strong alumni network.
+             The club also aims to empower its members by increasing their knowledge base in finance related domains, via various interactions,
+              discussions and industry projects brought with the help of our strong alumni network.
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
@@ -131,7 +135,9 @@
 
         <div class="section-title">
           <h2>Events</h2>
-          <p>The Club Conducts various other events throughout the academic year, to engage with the student community and introduce them to important concepts and new advancements in finance.</p>
+          <p>The Club Conducts various other events throughout the academic year, to engage with the student community and introduce them to important
+             concepts and new advancements in finance.
+          </p>
         </div>
 
         <div class="row">
@@ -139,7 +145,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Investas</a></h4>
-              <p>Investas is the annual 3-day managerial-fest conducted by ProfNITT, the Finance and Investments club of NIT Trichy for Finance Enthusiasts in NIT Trichy and South India.<br />The 2019 edition of Investas was a resounding success with 8 major events and 5 sponsors, and over 1000 students attending the fest.</p>
+              <p>Investas is the annual 3-day managerial-fest conducted by ProfNITT, the Finance and Investments club of NIT Trichy for Finance Enthusiasts
+                 in NIT Trichy and South India.<br />The 2019 edition of Investas was a resounding success with 8 major events and 5 sponsors, and over 1000
+                 students attending the fest.
+              </p>
             </div>
           </div>
 
@@ -147,7 +156,9 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Insight</a></h4>
-              <p>Every year, a distinguished alumni in the field of finance is invited to interact with the student community and put forward their opinions on various upcoming domains of finance.</p>
+              <p>Every year, a distinguished alumni in the field of finance is invited to interact with the student community
+               and put forward their opinions on various upcoming domains of finance.
+              </p>
             </div>
           </div>
 
@@ -155,7 +166,9 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">The Talk</a></h4>
-              <p>Every year we invite a Finance Leader to Campus to share their journey to the students and give them exposure from an Alumni who trod a different path to become a pioneer in their field.</p>
+              <p>Every year we invite a Finance Leader to Campus to share their journey to the students and give them exposure from an Alumni who
+                 trod a different path to become a pioneer in their field.
+              </p>
             </div>
           </div>
 
@@ -163,7 +176,9 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4><a href="">Guest Lectures and Webinars</a></h4>
-              <p>ProfNITT takes pride in having a strong mentor-alumni network, who are willing to shed light on interesting and important happenings in the world of finance and take out their time to interacting with us either offline or online.</p>
+              <p>ProfNITT takes pride in having a strong mentor-alumni network, who are willing to shed light on interesting and important happenings
+                 in the world of finance and take out their time to interacting with us either offline or online.
+              </p>
             </div>
           </div>
 
@@ -171,7 +186,8 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h4><a href="">Case Solving Competitions</a></h4>
-              <p>The club also conducts various case-solving competitions throughout the year, where students try solving real-life industry problems.</p>
+              <p>The club also conducts various case-solving competitions throughout the year, where students try solving real-life industry problems.
+              </p>
             </div>
           </div>
 
