fix : edit comment to reflect changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2> 
+          <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
     </div>
@@ -194,7 +194,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End Events Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
