--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bx-dollar-circle"></i></div>
               <h4><a href="">Investas</a></h4>
               <p>Investas is the annual 3-day managerial-fest conducted by ProfNITT, the Finance and Investments club of NIT Trichy for Finance Enthusiasts
                  in NIT Trichy and South India.<br />The 2019 edition of Investas was a resounding success with 8 major events and 5 sponsors, and over 1000
@@ -154,7 +154,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-book-reader"></i></div>
               <h4><a href="">Insight</a></h4>
               <p>Every year, a distinguished alumni in the field of finance is invited to interact with the student community
                and put forward their opinions on various upcoming domains of finance.
@@ -164,7 +164,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-message-rounded-dots"></i></div>
               <h4><a href="">The Talk</a></h4>
               <p>Every year we invite a Finance Leader to Campus to share their journey to the students and give them exposure from an Alumni who
                  trod a different path to become a pioneer in their field.
@@ -184,7 +184,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bx bx-pie-chart-alt-2"></i></div>
               <h4><a href="">Case Solving Competitions</a></h4>
               <p>The club also conducts various case-solving competitions throughout the year, where students try solving real-life industry problems.
               </p>
