--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2>
+          <h2>The Finance and Investment club of NIT Trichy.</h2> 
         </div>
       </div>
     </div>
@@ -99,8 +99,8 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>What started out as a WhatsApp Group among students interested in finance, ProfNITT is now the finance and investments club of NIT Trichy,
-             with more than 30 members.We aim to bring about financial literacy among students of NIT-Trichy, helping them make well-informed
+          <p>What started out as a WhatsApp Group among students interested in finance, <strong>ProfNITT</strong> is now the finance and investments club of NIT Trichy,
+             with more than 30 members. We aim to bring about financial literacy among students of NIT-Trichy, helping them make well-informed
              monetary decisions.
           </p>
         </div>
