feat: remove button in about us, replace with images

--- a/index.html
+++ b/index.html
@@ -116,12 +116,26 @@
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-             The club also aims to empower its members by increasing their knowledge base in finance related domains, via various interactions,
-              discussions and industry projects brought with the help of our strong alumni network.
-            </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
-          </div>
+              <p>
+               The club also aims to empower its members by increasing their knowledge base in finance related domains, via various interactions,
+                discussions and industry projects brought with the help of our strong alumni network.
+              </p>
+
+              <div class="row-ig">
+                     <div class="column-ig">
+                       <a href = "https://icons8.com/icon/cc_e5716v_NK/bitcoin-cryptocurrency"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/bitcoin-cryptocurrency.png"></a>
+                     </div>
+                     <div class="column-ig">
+                       <a href = "https://icons8.com/icon/al0Ey554qDWT/company-assets"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/company-assets-.png"/></a>
+                     </div>
+                     <div class="column-ig">
+                       <a href = "https://icons8.com/icon/123468/dividends"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/dividends.png"/></a>
+                     </div>
+                     <div class="column-ig">
+                       <a href = "https://icons8.com/icon/63371/bonds"><img class ="photogrid" src="https://img.icons8.com/ios/50/000000/bonds.png"/></a>
+                     </div>
+               </div>
+            </div>
         </div>
 
       </div>
