feat: replace images in about us with image fonts

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2> 
+          <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
     </div>
@@ -121,20 +121,20 @@
                 discussions and industry projects brought with the help of our strong alumni network.
               </p>
 
-              <div class="row-ig">
-                     <div class="column-ig">
-                       <a href = "https://icons8.com/icon/cc_e5716v_NK/bitcoin-cryptocurrency"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/bitcoin-cryptocurrency.png"></a>
-                     </div>
-                     <div class="column-ig">
-                       <a href = "https://icons8.com/icon/al0Ey554qDWT/company-assets"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/company-assets-.png"/></a>
-                     </div>
-                     <div class="column-ig">
-                       <a href = "https://icons8.com/icon/123468/dividends"><img class = "photogrid" src="https://img.icons8.com/ios/50/000000/dividends.png"/></a>
-                     </div>
-                     <div class="column-ig">
-                       <a href = "https://icons8.com/icon/63371/bonds"><img class ="photogrid" src="https://img.icons8.com/ios/50/000000/bonds.png"/></a>
-                     </div>
-               </div>
+              <div class="icon-bar">
+              <div class = "icon">
+                <i class='bx bx-money'></i>
+              </div>
+              <div class = "icon">
+                <i class='bx bxs-badge-dollar'></i>
+              </div>
+              <div class = "icon">
+                <i class='bx bx-credit-card-front'></i>
+              </div>
+              <div class = "icon">
+                <i class='bx bx-line-chart'></i>
+              </div>
+              </div>
             </div>
         </div>
 
