some changes done

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center justify-content-between">
-          <h1 class="logo"><a href="#">ProfNITT</a></h1>
+          <!-- <h1 class="logo"><a href="#">ProfNITT</a></h1> -->
           <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+          <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
 
           <nav class="nav-menu d-none d-lg-block">
             <ul>
@@ -67,11 +67,11 @@
                 </ul>
               </li>
               <li><a href="#contact">Contact</a></li>
-              <li><a href="#inductions">Inductions</a></li>
+              <!-- <li><a href="#inductions">Inductions</a></li> -->
             </ul>
           </nav><!-- .nav-menu -->
 
-          <a href="#about" class="get-started-btn scrollto">Get Started</a>
+          
         </div>
       </div>
 
@@ -431,7 +431,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>ProfNITT</h3>
+      <!-- <h3>ProfNITT</h3> -->
+      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       <p>The Finance and Investments Club of NIT Trichy</p>
       <div class="social-links">
        
