events and members interchaged

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#members">Members</a></li>
               <li class="drop-down"><a href="#events">Events</a>
                 <ul>
                   <li><a href="#investas">Investas</a></li>
@@ -60,7 +59,8 @@
                   <li><a href="#guest-lectures">Guest Lectures and Webinars</a></li>
                 </ul>
               </li>
-              <li class="drop-down"><a href="">Projects</a>
+              <li><a href="#members">Members</a></li>
+              <li class="drop-down"><a href="#journey">Projects</a>
                 <ul>
                   <li><a href="#bharatx">BharatX</a></li>
                   <li><a href="#navriti">Navriti</a></li>
@@ -330,7 +330,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <section id="journey" class="pricing">
       <div class="container">
 
         <div class="section-title">
