fix: replace placeholder contact info

--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
               <div class="email">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>profnitt.club@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="ri-phone-line"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 97789 60737</p>
               </div>
 
             </div>
