--- a/index.html
+++ b/index.html
@@ -335,7 +335,10 @@
 
         <div class="section-title">
           <h2>Journey</h2>
-          <img src="journey.jpeg">
+
+          <div class="wrapper">
+          <img src="journey.jpeg" class="pricing">
+        </div>
           
 
         </div>
