--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <li class="drop-down"><a href="#events">Events</a>
                 <ul>
                   <li><a href="#investas">Investas</a></li>
-                  <li><a href="#insight">Insight</a></li>
+                  <li><a href="insight-page.html">Insight</a></li>
                   <li><a href="#talk">The Talk</a></li>
                   <li><a href="#guest-lectures">Guest Lectures and Webinars</a></li>
                 </ul>
