--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>ProfNITT</h1>
-          <h2>The Finance and Investment club of NIT Trichy.</h2>
+          <h2>Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
     </div>
