--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<body> <h1>Site has been hacked successfully, pls contact sethu karthikeyan and aadhi to recover<h1> </body>
-<!--<body>
+
+<body>
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
@@ -516,6 +516,6 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-</body>-->
+</body>
 
 </html>
