--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SethuNITT</title>
+  <title>ProfNITT</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -85,7 +85,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h1>SethuNITT</h1>
+          <h1>ProfNITT</h1>
           <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
