fix: index.html

--- a/index-events.html
+++ b/index-events.html
@@ -80,7 +80,7 @@
 
             <nav class="nav-menu d-none d-lg-block">
               <ul>
-                <li class="active"><a href="index-main.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
                 <li>
                   <a href="#portfolio">Events</a>
@@ -95,7 +95,7 @@
                 </li>
                 <li><a href="Members-Page/index.html">Members</a></li>
                 <li>
-                  <a href="index-main.html#journey">Projects</a>
+                  <a href="index.html#journey">Projects</a>
                   <!-- <ul>
                     <li><a href="#bharatx">BharatX</a></li>
                     <li><a href="#navriti">Navriti</a></li>
