--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           >
             <!-- Uncomment below if you prefer to use an image logo -->
             
-            <a href="index-main.html" class="logo"
+            <a href="index.html" class="logo"
             ><img
               src="ProfNITT_events Page/assets/img/about/logo.png"
               alt=""
@@ -69,7 +69,7 @@
 
             <nav class="nav-menu d-none d-lg-block">
               <ul>
-                <li class="active"><a href="index-main.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li>
                   <a href="#events">Events</a>
