--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h1>ProfNITT</h1>
+          <h1>Fuck You - By Sethu</h1>
           <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
