--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
 
-  <title>President: Sethu</title>
+  <title>ProfNITT</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
   <meta content="" name="descriptison" />
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h1>Fuck You - By Sethu</h1>
+          <h1>ProfNITT</h1>
           <h2>The Finance and Investment club of NIT Trichy.</h2>
         </div>
       </div>
