--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <img src="negp/assets/img/about/Anshul.jpeg" class="img-fluid" alt="" />
             <div class="portfolio-info">
               <h4>ANSHUL VISHAL</h4>
-              <p>VICE PRESIDENT</p>
+              <p>PRESIDENT</p>
                <a href="https://www.linkedin.com/in/anshulvishala3815719a/" class="details-link" title="linkedin"><i
                   class="fab fa-linkedin"></i></a>
             </div>
@@ -349,7 +349,7 @@
             <div style="clear:both"></div>
             <div class="portfolio-info">
               <h4>SHUBHAM KADAM</h4>
-              <p>CO-ORDINATOR</p>
+              <p>VICE PRESIDENT</p>
               
               <a href="https://www.linkedin.com/in/shubhamkadam00/" class="details-link" title="linkedin"><i
                   class="fab fa-linkedin"></i></a>
@@ -360,7 +360,7 @@
             <div style="clear:both"></div>
             <div class="portfolio-info">
               <h4>SETHU KARTHIKEYAN</h4>
-              <p>TECH LEAD</p>
+              <p>PROJECT LEAD</p>
               <!--<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>-->
               <a href="https://www.linkedin.com/in/tk-sethu-karthikeyan-thiruchirumbalam-10881615a/"
                 class="details-link" title="linkedin"><i class="fab fa-linkedin"></i></a>
