--- a/Members-Page/index.html
+++ b/Members-Page/index.html
@@ -93,7 +93,7 @@
                             <img src="member_image/Nithyanand 3 year.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2>Porika N</h2>
+                            <h2>Poriki N</h2>
                             <h3></h3>
                             <p></p>
                             <h4></h4>
